# myclaw

./: .env.example  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  config.toml
.cargo/: config.toml
src/: main.rs  util.rs
src/agent/: job.rs  manager.rs  mod.rs  status.rs
src/ai/: client.rs  context.rs  mod.rs  stream.rs
src/coding/: executor.rs
src/config/: mod.rs
src/discord/: commands.rs  handler.rs  mod.rs
src/memory/: db.rs  mod.rs  rollout.rs  store.rs
src/skills/: file_ops.rs  manager.rs  mod.rs  search.rs  system_info.rs
src/skills/markdown/search_memories/: SKILL.md
src/skills/markdown/sys_info/: SKILL.md
src/skills/markdown/sys_process/: SKILL.md
src/tasks/: mod.rs  runner.rs  scheduler.rs
src/tools/: command_safety.rs  file_read.rs  file_write.rs  mod.rs  shell_exec.rs  web_fetch.rs
src/web/: routes.rs  server.rs
src/web/static_/: app.js  index.html  styles.css
