[package]
name = "myclaw"
version = "0.1.0"
edition = "2021"
description = "Personal AI assistant bot - Discord first, learns from you"
rust-version = "1.88.0"

[dependencies]
# Discord
serenity = { version = "0.12", features = ["collector", "client", "gateway", "http", "rustls_backend", "cache", "standard_framework", "model"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# AI / HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite / DB
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Config
toml = "0.8"
dotenv = "0.15"

# Cron
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Web Dashboard
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
wiremock = "0.6"
tokio-test = "0.4"
